[package]
name = "agileplus-nats"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-nats.workspace = true
futures-util.workspace = true
agileplus-events = { path = "../agileplus-events" }
agileplus-domain = { path = "../agileplus-domain" }
