[package]
name = "agileplus-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AgilePlus"
authors = ["kooshapari"]
description = "agileplus plane — Phenotype infrastructure crate (AgilePlus)"
documentation = "https://docs.rs/agileplus-plane"
keywords = ["phenotype", "agileplus"]
categories = ["development-tools"]

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
sha2.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest = { version = "0.13", features = ["json"] }
axum.workspace = true
hmac = "0.12"
hex = "0.4"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
